<resources>
    <string name="app_name">DroneMissions</string>
    <string name="btn_NewMission">New Mission</string>
    <string name="btn_OldMissions">Old Missions</string>
    <string name="app_title">Drone Missions : La Pomme Volante</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_MissionName">Nom de Mission</string>
    <string name="btn_Trajet">Trajet</string>
    <string name="btn_Photo">Photo</string>
    <string name="btn_Supprimer" >Supprimer le dernier point</string>
    <string name="btn_Envoyer">Evoyer le trajet</string>
    <string name="entrez_un_nom_de_mission">Entrez un nom de mission</string>
</resources>
